# patchi

./: CLAUDE.md  FINDINGS.md  PAPER.md  README.md  devlog.md  pyproject.toml  queue.md  todo.md
.github/workflows/: ci.yml  pages.yml
data_lake/: artificialtime2.txt  proto.txt
docs/: index.html
literature/: REVIEW.md  control-reframing.md  sources.md
scripts/: run.py  run_generality.py  run_real.py  run_residual.py  run_structural.py  run_structural_baselines.py  run_structural_significance.py  run_structural_weighted.py  submit_clawrxiv.py
src/patchi/: __init__.py  benchmark.py  blend.py  block.py  category.py  compose.py  demo.py  memory.py  proof.py  regions.py  relations.py  situation.py  structural.py  twirk.py  wordclass.py
tests/: test_benchmark.py  test_blend.py  test_block.py  test_category.py  test_compose.py  test_demo.py  test_memory.py  test_proof.py  test_regions.py  test_relations.py  test_situation.py  test_smoke.py  test_structural.py  test_twirk.py  test_wordclass.py
